# active_learning_de

./: .gitignore  pyproject.toml  run.py  run_and_profile.py
active_learning_de/: gaussian_data_gaussian_sm_prim_kd.py  run_experiments.py  test.py
active_learning_de/blueprint/: dynamic_blueprint.py
active_learning_de/evaluator/: display_data_evaluator.py  simple_result_evaluator.py
active_learning_de/experiments/: gaussian_data_gaussian_sm_prim_kd.py  simple_dependency_estimation.py  simple_dependency_estimation_blueprint.py
active_learning_de/knowledge_discovery/: dependency_knowledge_task.py
active_learning_de/surrogate_models/: pool_surrogate_model.py
ide/: run_experiments.py  run_from_path.py
ide/blueprint/: dynamic_blueprint.py
ide/building_blocks/: data_pool.py  data_sampler.py  data_subscriber.py  dependency_test.py  evaluator.py  experiment_modules.py  multi_sample_test.py  oracle.py  query_optimizer.py  query_sampler.py  selection_criteria.py  stopping_criteria.py  test_interpolation.py  two_sample_test.py
ide/core/: active_learner.py  blueprint.py  configuration.py  data_pool.py  data_sampler.py  data_subscriber.py  evaluator.py  experiment.py  experiment_builder.py  experiment_module.py  experiment_modules.py  experiment_runner.py  query_pool.py  queryable.py  stopping_criteria.py
ide/evaluator/: dynamic_display_data_evaluator.py  simple_result_evaluator.py
ide/experiments/: de_blueprint.py  de_sqr.py  ide_blueprint.py  ide_grid_blueprint.py  ide_lin.py  ide_sqr.py  optimal_query_lin.py  optimal_query_sqr.py  simple_dependency_estimation.py  simple_dependency_estimation_blueprint.py
post_experiment_computation/: calculate_gain.py  calculate_query_convergence.py  noise_gain.py
tests/: test_active_learning_de.py  test_all.py  test_gaussian_data_gaussian_sm_prim_kd.py
(+37 files in other folders)
