[tool.poetry]
name = "ide"
version = "0.2.0"
description = "Interventional test for independence"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
distribution-data-generation = { path = "/home/bela/Cloud/code/Git/distribution_data_generation", develop = true }
#distribution-data-generation = {git = "https://github.com/bela127/distribution_data_generation.git"}
active-learning-ts = { path = "/home/bela/Cloud/code/Git/active_learning_ts", develop = true }
#active-learning-ts = {git = "https://github.com/bela127/active_learning_ts.git"}
libclang = "<12.0"
tensor-annotations = "^1.0.2"
tensor-annotations-jax-stubs = "^1.0.0"
data-science-types = "^0.2.23"
coloredlogs = "^15.0.1"
ipython = "^8.0.1"
matplotlib = "^3.5.1"
Rtree = "^0.9.7"
nptyping = ">=2.0.0a1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
